# git-switch-user

./: .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  build.rs  release.toml
.github/workflows/: ci.yml  release.yml
ci/: build-deb  cargo-out-dir  sha256-releases  utils.sh
src/: main.rs  profiles.rs
