[package]
name = "git-switch-user"
version = "1.0.0"
authors = ["Carlos Quintana <carlos@cquintana.dev>"]
edition = "2018"
description = "Manage your git identities with ease"
documentation = "https://github.com/cquintana92/git-switch-user"
homepage = "https://github.com/cquintana92/git-switch-user"
repository = "https://github.com/cquintana92/git-switch-user"
readme = "README.md"
keywords = ["git", "identities"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33"
env_logger = "0.8.1"
log = "0.4.11"
git-version = "0.3.4"
prettytable-rs = "0.8.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5.7"
xdg = "2.2.0"
